--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<img src="/http://placekitten.com/g/200/300" alt="kočka">
+<img src="http://placekitten.com/g/200/300" alt="kočka">
 <h1> Pavlína </h1>
