--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <img src="https://placekitten.com/200/300" alt="kočka">
-<h1> Nazdar a ahoj </h1>
+<link rel="stylesheet" href="style.css">
+<h1> Nazdar a ahoj a cau </h1>
+
