--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<img src="https://placekitten.com/200/300" alt="kočka">
-<link rel="stylesheet" href="style.css">
-<h1> Nazdar a ahoj a cau </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <img src="https://placekitten.com/200/300" alt="kočka">
+    <h1> Nazdar a ahoj a cau </h1> 
+</body>
+</html>
+
+
+
+
+
 
